feat: (9) Add confirm policy endpoint and service for updating policy status
