# src/routes/confirm.ts
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import { confirmPolicy } from '../controllers/policy.controller';
+
+const router = Router();
+
+router.post('/', confirmPolicy);
+
+export default router;
